# Gavimetric-Fuel-Consumption-Meter

./: README.md
Gavimetric Fuel Consumption Meter/: CMakeLists.txt
Gavimetric Fuel Consumption Meter/main/: analogInput.c  bufferCircular.c  informe.c  myTaskConfig.c  myTaskConfig.h
Gavimetric_Meter/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Gavimetric_Meter/main/: CMakeLists.txt  analogInput.h  bufferCircular.c  bufferCircular.h  calculaConsumo.c  calculaConsumo.h  calculaMedias.c  calculaMedias.h  comandosConsola.c  comandosConsola.h  comunicacionDisplay.c  comunicacionDisplay.h  comunicacionRemoto.c  comunicacionRemoto.h  configSistema.c  configSistema.h  controlDeposito.c  controlDeposito.h  estadoSistema.c  estadoSistema.h  fsm.c  fsm.h  informe.h  interrupcionEmergencia.c  interrupcionEmergencia.h  main.c  main_old.c  medidasNivel.c  medidasNivel.h  paradaEmergencia.c  paradaEmergencia.h
