idf_component_register(SRCS "interrupcionEmergencia.c" "comunicacionRemoto.c" "comunicacionDisplay.c" "comandosConsola.c" "paradaEmergencia.c" "configSistema.c" "estadoSistema.c" "calculaConsumo.c" "medidasNivel.c" "controlDeposito.c" "fsm.c" "myTaskConfig.c" "bufferCircular.c" "main.c"
                    INCLUDE_DIRS ".")
